Add feature Trash file
